syntax = "proto3";
package proto;

option go_package = "service/proto";

service SimpleKV {
	rpc Get(GetRequest) returns (BaseResponse){};
	rpc Set(SetRequest) returns (BaseResponse){};
	rpc Del(DelRequest) returns (BaseResponse){};
	rpc Expire(ExpireRequest) returns (BaseResponse){};
	rpc TTL(TTLRequest) returns (BaseResponse){};
}

message BaseResponse {
	string msg = 1;
	string err = 2;
}

message GetRequest {
	string key = 1;
}

message SetRequest {
	string key = 1;
	string value = 2;
}

message DelRequest {
	string key = 1;
}

message ExpireRequest {
	string key = 1;
	uint32 ttl = 2;
}

message TTLRequest{
	string key = 1;
}